fixed header spacing

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -5,3 +5,7 @@ body {
     color: #244751;
   }
 }
+
+.navbar .pageLink{
+  padding-right: 20px;
+}
